Work on mobile fixes...

--- a/app/assets/stylesheets/calculator.scss
+++ b/app/assets/stylesheets/calculator.scss
@@ -191,6 +191,11 @@ div.jumbotron.wider {
 .slider {
   width: 200px;
 }
+@media screen and (max-device-width: 1024px) {
+  input.slider {
+    width: 50px;
+  }
+}
 
 /*
  * Footer
